2005/01/16 23:13 (-0400) muppetman

	* xs/GtkTreeModelFilter.xs, t/GtkTreeModelFilter.t: Make sure that
	$modelfilter->get resolves to Gtk2::TreeModel::get.  (Committed
	the wrong changeset last night.)

2005/01/16 02:34 (-0400) muppetman

	* xs/GtkTreeModelFilter.xs, t/GtkTreeModelFilter.t: Set up @ISA 
	to reflect the fact that GtkTreeModelFilter implements the
	GtkTreeModel and GtkTreeDragSource interfaces.  Add isa_ok()
	tests to verify.

	* t/GtkTreeView.t: Change column type to hush gtk+ assertions.

2005/01/10 09:00 (-0400) muppetman

	* MANIFEST: add files that should've been there for 1.072.
	rel-1-07-2 retagged here.

2005/01/10 01:19 (-0400) muppetman

	* Gtk2.pm, META.yml, NEWS, README: Unstable release 1.072.

	* xs/GtkDialog.xs: Document Gtk2::alternative_dialog_button_order
	in Gtk2::main, to avoid creating a Gtk2.pod that conflicts with
	Gtk2.pm.

	* t/GtkLabel.t, t/GtkTextView.t: Correct skip counts.

2005/01/08 22:45 (-0400) muppetman

	* xs/GtkLabel.xs, t/GtkLabel.t: Bind and test
	gtk_label_[gs]et_single_line_mode
	gtk_label_[gs]et_max_width_chars

	* xs/GtkListStore.xs, t/GtkListStore.t: Bind and test
	gtk_list_store_insert_with_values

	* xs/GtkTextView.xs, t/GtkTextView.t: Bind and test
	gtk_text_view_get_iter_at_position

	* xs/GtkToolItem.xs, t/GtkToolItem.t: Bind and test
	gtk_tool_item_rebuild_menu

2005/01/08 22:30 (-0400) muppetman

	* xs/GtkActionGroup.xs, t/GtkActionGroup.t: enable and test
	translation of action groups.

2005/01/07 22:27 (+0200) kaffeetisch

	* examples/cellrenderer_data.pl,
	examples/cellrenderer_spinbutton.pl, examples/customrenderer.pl:
	Change package names to use custom prefixes, to avoid putting
	stuff in the Gtk2 namespace.

	* t/PangoFont.t, xs/PangoFont.xs: Bind and test
	pango_font_description_set_absolute_size and
	pango_font_description_get_size_is_absolute.

	* t/PangoLayout.t, xs/PangoLayout.xs: Bind and test
	pango_layout_get_font_description.

2005/01/05 23:24 (-0400) muppetman
