@@ -12,7 +12,7 @@
 use strict;
 use warnings;
 
-use Gtk2::TestHelper tests => 9,
+use Gtk2::TestHelper tests => 10,
     at_least_version => [2, 5, 0, "GtkCellView is new in 2.6"], # FIXME: 2.6
     ;
 
@@ -24,6 +24,8 @@ my $win = Gtk2::Window->new;
 
 isa_ok (my $cview = Gtk2::CellView->new, 'Gtk2::CellView',
 	'Gtk2::CellView->new');
+
+isa_ok ($cview, 'Gtk2::CellLayout');
 
 isa_ok ($cview = Gtk2::CellView->new_with_text ('text'), 'Gtk2::CellView',
 	'Gtk2::CellView->new_with_text');
