@@ -3,7 +3,7 @@
 # $Header$
 
 use Gtk2::TestHelper
-	tests => 22,
+	tests => 23,
 	at_least_version => [2, 4, 0, "GtkComboBox is new in 2.4"],
 	;
 
@@ -12,6 +12,7 @@ my $combo_box;
 ## convenience -- text
 $combo_box = Gtk2::ComboBox->new_text;
 isa_ok ($combo_box, 'Gtk2::ComboBox');
+isa_ok ($combo_box, 'Gtk2::CellEditable');
 
 $combo_box->append_text ("some text");
 $combo_box->append_text ("more text");
