@@ -1,6 +1,6 @@
 #!/usr/bin/perl -w
 use strict;
-use Gtk2::TestHelper tests => 11;
+use Gtk2::TestHelper tests => 13;
 
 # $Header$
 
@@ -8,6 +8,8 @@ my $adjustment = Gtk2::Adjustment -> new(0, 0, 100, 1, 5, 10);
 
 my $spin = Gtk2::SpinButton -> new($adjustment, 0.2, 1);
 isa_ok($spin, "Gtk2::SpinButton");
+isa_ok($spin, "Gtk2::CellEditable");
+isa_ok($spin, "Gtk2::Editable");
 
 $spin -> configure($adjustment, 0.2, 1);
 
