@@ -26,6 +26,7 @@ MODULE = Gtk2::ComboBox	PACKAGE = Gtk2::ComboBox	PREFIX = gtk_combo_box_
 
 BOOT:
 	gperl_set_isa ("Gtk2::ComboBox", "Gtk2::CellLayout");
+	gperl_set_isa ("Gtk2::ComboBox", "Gtk2::CellEditable");
 
 GtkWidget *gtk_combo_box_new (class, GtkTreeModel *model=NULL)
     ALIAS:
