@@ -1,3 +1,11 @@
+2005/01/19 07:52 (-0400) rwmcfa1
+
+	* t/GtkCellView.t, t/GtkComboBox.t, t/GtkComboBoxEntry.t,
+	t/GtkSpinButton.t, t/GtkTreeModelSort.t, xs/GtkCellView.xs,
+	xs/GtkComboBox.xs, xs/GtkComboBoxEntry.xs, xs/GtkFileChooserWidget.xs,
+	xs/GtkSpinButton.xs, xs/GtkTreeModelFilter.xs, xs/GtkTreeModelSort.xs:
+	added missing interfaces to isa's and test for them
+
 2005/01/16 23:13 (-0400) muppetman
 
 	* xs/GtkTreeModelFilter.xs, t/GtkTreeModelFilter.t: Make sure that
